# create-dump

./: .autoheader_cache  README.md  ROADMAP.md  coverage.xml  create_dump_all_create_dump_20251110_133145.md  create_dump_all_create_dump_20251110_133145.sha256  feature_analysis_report.md  pyproject.toml
.github/workflows/: publish.yml
src/code_dump/: archiver.py  cleanup.py  cli.py  collector.py  core.py  path_utils.py  single.py  utils.py  version.py  writer.py
src/create_dump/: archiver.py  banner.py  cleanup.py  cli.py  collector.py  core.py  create_dump_all_create_dump_20251110_133455.md  create_dump_all_create_dump_20251110_133455.sha256  database.py  logging.py  notifications.py  orchestrator.py  path_utils.py  processor.py  scanning.py  single.py  system.py  utils.py  version.py  writer.py
src/create_dump/archive/: packager.py
src/create_dump/cli/: batch.py  cli_all_create_dump_20251110_141215.md  cli_all_create_dump_20251110_141215.sha256  main.py  rollback.py  single.py
src/create_dump/collector/: __init__.py  base.py
src/create_dump/workflow/: single.py
src/create_dump/writing/: json.py  markdown.py
tests/: test_archiver_core.py  test_archiver_integration.py  test_archiver_operations.py  test_archiver_orchestration.py  test_cleanup.py  test_cli.py  test_collector.py  test_core.py  test_notifications.py  test_orchestrator.py  test_orchestrator_coverage.py  test_path_utils.py  test_processor_coverage.py  test_scanning.py  test_single.py  test_utils.py  test_version.py  test_writer.py
tests/cli/: test_single.py
tests/writing/: test_json.py  test_markdown.py
