# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create-dump"
version = "6.1.0"
description = "Enterprise-grade code dump utility for monorepos"
authors = [{name = "dhruv", email = "dhruv13x@gmail.com"}]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pathspec>=0.12.0",
    "structlog>=24.0.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "toml>=0.10.0",
    "prometheus-client>=0.20.0",
]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]
readme = "README.md"

[project.scripts]
create-dump = "create_dump.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "black>=24.3.0",
    "mypy>=1.11.0",
    "coverage>=7.5.0",
    "hypothesis>=6.100.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/create_dump"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.pytest.ini_options]
pythonpath = ["src"]
timeout = 10
testpaths = ["tests"]
addopts = "--cov=src/create_dump --cov-report=html --cov-fail-under=85"

filterwarnings = [
    "ignore::DeprecationWarning:create_dump.batch",
]

# NEW: Config section for runtime defaults (loaded via load_config)
[tool.create-dump]
# dest = "/path/to/dumps"  # Uncomment and customize: Default output destination (CLI --dest overrides)
use_gitignore = true
git_meta = true
max_file_size_kb = 5000  # Example: Limit file sizes in KB

#addopts = "--doctest-modules --doctest-ellipsis"
